# goit-ml

./: pyproject.toml
data/hw_04/: salaries.txt
hw-03/: task1.py  task3.py  task4.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py
src/hw_03/: task2.py  task4.py
src/hw_04/: bot.py  task1.py  task2.py  task3.py
tests/hw_03/: test_task1.py  test_task2.py  test_task3.py  test_task4.py
tests/hw_04/: test_task1.py  test_task2.py
